--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
+/* PC、スマホ共通スタイル */
 body{
     font-family:"Source Sans Pro","Hiragaino Kaku Gothic ProN", Meiryo, Arial, sans-serif;
 }
 
 p{
     font-size: 15px;
+}
+
+/* ====================
+    PC用のスタイル 
+=====================*/
+body{
+    max-width: 1080px;
+    min-width: 960px;
+    margin: 0auto 0auto;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
 }
