--- a/style.css
+++ b/style.css
@@ -10,13 +10,40 @@ p{
 /* ====================
     PC用のスタイル 
 =====================*/
+/* 横幅設定 */
 body{
     max-width: 1080px;
     min-width: 960px;
     margin: 0auto 0auto;
 }
 
+/* ヘッダー */
 header{
     display: flex;
     justify-content: space-between;
+}
+
+/* ナビゲーションのレイアウト */
+#nav-pc{
+    font-size: 14px;
+    padding-top: 15px;
+}
+
+/* ナビゲーションのリンクの装飾設定 */
+#nav-pc > a{
+    text-decoration: none;
+    margin-left: 20px;
+}
+#nav-pc > a:link{
+    color: #0d0d0d;
+}
+#nav-pc > a:visited{
+    color: #0d0d0d;
+}
+#nav-pc > a:hover{
+    color: #0d0d0d;
+    text-decoration: underline;
+}
+#nav-pc > a:active{
+    color: #0d0d0d;
 }
