--- a/style.css
+++ b/style.css
@@ -47,3 +47,32 @@ header{
 #nav-pc > a:active{
     color: #0d0d0d;
 }
+
+/* メインビジュアル */
+#main-visual{
+    position: relative;
+    height: 400px;
+}
+
+#main-message{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #2710d5;
+    color: #ffffff;
+    border-radius: 0 0 476px 0;
+    max-width: 620px;
+    height: 100%;
+    width: 100%;
+    z-index: 11;
+}
+
+#main-message > h1 {
+    font-size: 60px;
+    font-weight: bold;
+    margin: 100px 0 0 50px;
+}
+#main-message > p {
+    font-size: 28px;
+    margin: 0 0 0 50px;
+}
