--- a/style.css
+++ b/style.css
@@ -85,3 +85,42 @@ header{
     right: 0;
     z-index: 10;
 }
+
+/* 見出し */
+h2 {
+    margin: 40px 0 0 0;
+}
+
+h2::after {
+    content: url("images/line.png");
+    margin-left: 10px;
+}
+
+h3 {
+    font-size: 27px;
+}
+
+/* ミッション */
+#mission {
+    margin: 80px auto 80px auto;
+    width: 100%;
+}
+
+#mission-flex {
+    width: 100%;
+    display: flex;
+}
+
+#mission-flex > div {
+    width: 50%;
+    margin: 20px;
+}
+
+#mission-photo {
+    width: 100%;
+}
+
+#s2dgs {
+    margin-top: 50px;
+    width: 100%;
+}
